--- a/src/App.css
+++ b/src/App.css
@@ -196,9 +196,13 @@ body {
   width: 13px;
 }
 
+@media(min-width: 320px) and (max-width: 350px){
+
+}
+
 @media(min-width: 360px) and (max-width: 365px){
   .nav{
-    margin-top: -35px;
+    margin-top: -50px;
   }
 
   body{
@@ -901,7 +905,7 @@ body {
 
 @media(min-width: 413px) and (max-width: 415px){
   .nav{
-    margin-top: -450px;
+    margin-top: -350px;
   }
   .pageTwo{
     display: flex;
