--- a/src/App.css
+++ b/src/App.css
@@ -1209,7 +1209,7 @@ body {
 
 @media(min-width: 413px) and (max-width: 415px){
   .nav{
-    margin-top: -450px;
+    margin-top: -20W0px;
   }
   .pageTwo{
     display: flex;
