--- a/src/App.css
+++ b/src/App.css
@@ -386,6 +386,21 @@ body {
           margin-top: -200px;
         }
 
+        .content{
+          margin-top: 20px;
+        }
+
+        .content2{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+        }
+
+        .content2 h2{
+          color: #fff;
+        }
+
         body{
           overflow-x: hidden;
         }
@@ -1092,6 +1107,17 @@ body {
 @media(min-width: 410px) and (max-width: 412px){
   .nav{
     margin-top: -460px;
+  }
+
+  .content2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .content2 h2{
+    color: #fff
   }
   .pageTwo{
     display: flex;
